--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -1,6 +1,4 @@
 
->>>>>>>\ branch\ 'sources'\ of\ https = //github.com/rkoryakov/gzpn-spc-csl.git
-
 adminView.ConfirmDialog.deleteGroup.info     = Are you sure want to delete the group?
 adminView.ConfirmDialog.deleteUser.close     = Close
 adminView.ConfirmDialog.deleteUser.info      = Are you sure want to delete the user?
@@ -52,31 +50,36 @@ adminView.placeholder.searchfield            = Search..
 createDocSettingsWindow.caption             = Document Creating UI - Settings
 createDocSettingsWindow.projectTree.caption = Grouping settings
 
-createdoc.DocCreatingLayout.addWorksetButton.desc            = Add workset..
-createdoc.DocCreatingLayout.delWorksetButton.desc            = Remove workset..
-createdoc.DocCreatingLayout.documentGrid.columns.changedate  = Change Date
-createdoc.DocCreatingLayout.documentGrid.columns.code        = Code
-createdoc.DocCreatingLayout.documentGrid.columns.createdate  = Create Date
-createdoc.DocCreatingLayout.documentGrid.columns.id          = Id
-createdoc.DocCreatingLayout.documentGrid.columns.name        = Name
-createdoc.DocCreatingLayout.documentGrid.columns.type        = Type
-createdoc.DocCreatingLayout.documentGrid.columns.version     = Version
-createdoc.DocCreatingLayout.documentGrid.columns.work        = Work
-createdoc.DocCreatingLayout.documentGrid.columns.workset     = Work set
-createdoc.DocCreatingLayout.downloadWorksetButton.desc       = Download Excel Work sets
-createdoc.DocCreatingLayout.projectTreeCaption               = Project tree
-createdoc.DocCreatingLayout.userLayoutSettings.desc          = User Layout settings
-createdoc.DocCreatingLayout.worksetFilterField.placeholder   = Search..
-createdoc.DocCreatingLayout.worksetFilterSettingsButton.desc = Filter settings
-createdoc.DocCreatingLayout.worksetGrid.columns.changedate   = Change date
-createdoc.DocCreatingLayout.worksetGrid.columns.code         = Code
-createdoc.DocCreatingLayout.worksetGrid.columns.createdate   = Create date
-createdoc.DocCreatingLayout.worksetGrid.columns.id           = ID
-createdoc.DocCreatingLayout.worksetGrid.columns.name         = Name
-createdoc.DocCreatingLayout.worksetGrid.columns.pir          = PIR
-createdoc.DocCreatingLayout.worksetGrid.columns.planobj      = Plan object
-createdoc.DocCreatingLayout.worksetGrid.columns.smr          = SMR
-createdoc.DocCreatingLayout.worksetGrid.columns.ver          = Version
+createdoc.CreateDocLayout.addWorksetButton.desc                  = Add workset..
+createdoc.CreateDocLayout.delWorksetButton.desc                  = Remove workset..
+createdoc.CreateDocLayout.downloadWorksetButton.desc             = Download Excel Work sets
+createdoc.CreateDocLayout.projectTreeCaption                     = Project tree
+createdoc.CreateDocLayout.userLayoutSettings.desc                = User Layout settings
+createdoc.CreateDocLayout.worksetFilterField.placeholder         = Search..
+createdoc.CreateDocLayout.worksetFilterSettingsButton.desc       = Filter settings
+createdoc.CreateDocLayout.worksetGrid.columns.changedate         = Change date
+createdoc.CreateDocLayout.worksetGrid.columns.code               = Code
+createdoc.CreateDocLayout.worksetGrid.columns.createdate         = Create date
+createdoc.CreateDocLayout.worksetGrid.columns.id                 = ID
+createdoc.CreateDocLayout.worksetGrid.columns.name               = Name
+createdoc.CreateDocLayout.worksetGrid.columns.pir                = PIR
+createdoc.CreateDocLayout.worksetGrid.columns.planobj            = Plan object
+createdoc.CreateDocLayout.worksetGrid.columns.smr                = SMR
+createdoc.CreateDocLayout.worksetGrid.columns.ver                = Version
+createdoc.WorkSetDocumentation.addDocumentButton.desc            = Add document..
+createdoc.WorkSetDocumentation.delDocumentButton.desc            = Remove document..
+createdoc.WorkSetDocumentation.documentFilterField.placeholder   = Search document...
+createdoc.WorkSetDocumentation.documentFilterSettingsButton.desc = Filter settings
+createdoc.WorkSetDocumentation.documentGrid.columns.changedate   = Change Date
+createdoc.WorkSetDocumentation.documentGrid.columns.code         = Code
+createdoc.WorkSetDocumentation.documentGrid.columns.createdate   = Create Date
+createdoc.WorkSetDocumentation.documentGrid.columns.id           = Id
+createdoc.WorkSetDocumentation.documentGrid.columns.name         = Name
+createdoc.WorkSetDocumentation.documentGrid.columns.type         = Type
+createdoc.WorkSetDocumentation.documentGrid.columns.version      = Version
+createdoc.WorkSetDocumentation.documentGrid.columns.work         = Work
+createdoc.WorkSetDocumentation.documentGrid.columns.workset      = Work set
+createdoc.WorkSetDocumentation.downloadDocumentsButton.desc      = Download Excel Documents
 
 logon.button.signin  = Sign in
 logon.label.login    = Login
