--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -1,6 +1,4 @@
 
->>>>>>>\ branch\ 'sources'\ of\ https = //github.com/rkoryakov/gzpn-spc-csl.git
-
 adminView.ConfirmDialog.deleteGroup.info     = \u0412\u044B \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043B\u044C\u043D\u043E \u0445\u043E\u0442\u0438\u0442\u0435 \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u0440\u043E\u043B\u044C?
 adminView.ConfirmDialog.deleteUser.close     = \u041E\u0442\u043C\u0435\u043D\u0430
 adminView.ConfirmDialog.deleteUser.info      = \u0412\u044B \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043B\u044C\u043D\u043E \u0445\u043E\u0442\u0438\u0442\u0435 \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F?
@@ -52,31 +50,36 @@ adminView.placeholder.searchfield            = \u041F\u043E\u0438\u0441\u043A..
 createDocSettingsWindow.caption             = \u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430 - \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0435 \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438
 createDocSettingsWindow.projectTree.caption = \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0430 \u0433\u0440\u0443\u043F\u043F\u0438\u0440\u043E\u0432\u043A\u0438
 
-createdoc.DocCreatingLayout.addWorksetButton.desc            = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
-createdoc.DocCreatingLayout.delWorksetButton.desc            = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
-createdoc.DocCreatingLayout.documentGrid.columns.changedate  = \u0414\u0430\u0442\u0430 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F
-createdoc.DocCreatingLayout.documentGrid.columns.code        = \u041A\u043E\u0434
-createdoc.DocCreatingLayout.documentGrid.columns.createdate  = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
-createdoc.DocCreatingLayout.documentGrid.columns.id          = \u0418\u0434
-createdoc.DocCreatingLayout.documentGrid.columns.name        = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-createdoc.DocCreatingLayout.documentGrid.columns.type        = \u0422\u0438\u043F
-createdoc.DocCreatingLayout.documentGrid.columns.version     = \u0412\u0435\u0440\u0441\u0438\u044F
-createdoc.DocCreatingLayout.documentGrid.columns.work        = \u0420\u0430\u0431\u043E\u0442\u0430
-createdoc.DocCreatingLayout.documentGrid.columns.workset     = \u041A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
-createdoc.DocCreatingLayout.downloadWorksetButton.desc       = \u041E\u0442\u043A\u0440\u044B\u0442\u044C \u0432 Excel 
-createdoc.DocCreatingLayout.projectTreeCaption               = \u0414\u0435\u0440\u0435\u0432\u043E \u043F\u0440\u043E\u0435\u043A\u0442\u043E\u0432
-createdoc.DocCreatingLayout.userLayoutSettings.desc          = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0435 \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043E\u0442\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u0438\u044F
-createdoc.DocCreatingLayout.worksetFilterField.placeholder   = \u0424\u0438\u043B\u044C\u0442\u0440 \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442\u043E\u0432...
-createdoc.DocCreatingLayout.worksetFilterSettingsButton.desc = \u041D\u0430\u0439\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0444\u0438\u043B\u044C\u0442\u0440\u0430
-createdoc.DocCreatingLayout.worksetGrid.columns.changedate   = \u0414\u0430\u0442\u0430 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F
-createdoc.DocCreatingLayout.worksetGrid.columns.code         = \u041A\u043E\u0434
-createdoc.DocCreatingLayout.worksetGrid.columns.createdate   = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
-createdoc.DocCreatingLayout.worksetGrid.columns.id           = ID
-createdoc.DocCreatingLayout.worksetGrid.columns.name         = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-createdoc.DocCreatingLayout.worksetGrid.columns.pir          = \u041F\u0418\u0420
-createdoc.DocCreatingLayout.worksetGrid.columns.planobj      = \u041E\u0431\u044A\u0435\u043A\u0442 \u0433\u0435\u043D\u043F\u043B\u0430\u043D\u0430
-createdoc.DocCreatingLayout.worksetGrid.columns.smr          = \u0421\u041C\u0420
-createdoc.DocCreatingLayout.worksetGrid.columns.ver          = \u2116 \u0438\u0437\u043C\u0435\u043D\u0435\u0438\u044F
+createdoc.CreateDocLayout.addWorksetButton.desc                  = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
+createdoc.CreateDocLayout.delWorksetButton.desc                  = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
+createdoc.CreateDocLayout.downloadWorksetButton.desc             = \u041E\u0442\u043A\u0440\u044B\u0442\u044C \u0432 Excel 
+createdoc.CreateDocLayout.projectTreeCaption                     = \u0414\u0435\u0440\u0435\u0432\u043E \u043F\u0440\u043E\u0435\u043A\u0442\u043E\u0432
+createdoc.CreateDocLayout.userLayoutSettings.desc                = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0435 \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043E\u0442\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u0438\u044F
+createdoc.CreateDocLayout.worksetFilterField.placeholder         = \u0424\u0438\u043B\u044C\u0442\u0440 \u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442\u043E\u0432...
+createdoc.CreateDocLayout.worksetFilterSettingsButton.desc       = \u041D\u0430\u0439\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0444\u0438\u043B\u044C\u0442\u0440\u0430
+createdoc.CreateDocLayout.worksetGrid.columns.changedate         = \u0414\u0430\u0442\u0430 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F
+createdoc.CreateDocLayout.worksetGrid.columns.code               = \u041A\u043E\u0434
+createdoc.CreateDocLayout.worksetGrid.columns.createdate         = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
+createdoc.CreateDocLayout.worksetGrid.columns.id                 = ID
+createdoc.CreateDocLayout.worksetGrid.columns.name               = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+createdoc.CreateDocLayout.worksetGrid.columns.pir                = \u041F\u0418\u0420
+createdoc.CreateDocLayout.worksetGrid.columns.planobj            = \u041E\u0431\u044A\u0435\u043A\u0442 \u0433\u0435\u043D\u043F\u043B\u0430\u043D\u0430
+createdoc.CreateDocLayout.worksetGrid.columns.smr                = \u0421\u041C\u0420
+createdoc.CreateDocLayout.worksetGrid.columns.ver                = \u2116 \u0438\u0437\u043C\u0435\u043D\u0435\u0438\u044F
+createdoc.WorkSetDocumentation.addDocumentButton.desc            = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442..
+createdoc.WorkSetDocumentation.delDocumentButton.desc            = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442..
+createdoc.WorkSetDocumentation.documentFilterField.placeholder   = \u0424\u0438\u043B\u044C\u0442\u0440 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u043E\u0432...
+createdoc.WorkSetDocumentation.documentFilterSettingsButton.desc = \u041D\u0430\u0439\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0444\u0438\u043B\u044C\u0442\u0440\u0430
+createdoc.WorkSetDocumentation.documentGrid.columns.changedate   = \u0414\u0430\u0442\u0430 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F
+createdoc.WorkSetDocumentation.documentGrid.columns.code         = \u041A\u043E\u0434
+createdoc.WorkSetDocumentation.documentGrid.columns.createdate   = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
+createdoc.WorkSetDocumentation.documentGrid.columns.id           = \u0418\u0434
+createdoc.WorkSetDocumentation.documentGrid.columns.name         = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+createdoc.WorkSetDocumentation.documentGrid.columns.type         = \u0422\u0438\u043F
+createdoc.WorkSetDocumentation.documentGrid.columns.version      = \u0412\u0435\u0440\u0441\u0438\u044F
+createdoc.WorkSetDocumentation.documentGrid.columns.work         = \u0420\u0430\u0431\u043E\u0442\u0430
+createdoc.WorkSetDocumentation.documentGrid.columns.workset      = \u041A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
+createdoc.WorkSetDocumentation.downloadDocumentsButton.desc      = \u041E\u0442\u043A\u0440\u044B\u0442\u044C \u0432 Excel
 
 logon.button.signin  = \u0412\u043E\u0439\u0442\u0438
 logon.label.login    = \u041B\u043E\u0433\u0438\u043D
